--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,21 @@
 {
-  "name": "Gym Tracker",
-  "short_name": "Gym",
-  "icons": [
-    { "src": "icons/icon-192.svg", "sizes": "192x192", "type": "image/svg+xml" },
-    { "src": "icons/icon-512.svg", "sizes": "512x512", "type": "image/svg+xml" }
-  ],
-  "start_url": ".",
+  "name": "Diary & Notes",
+  "short_name": "DiaryApp",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000"
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
